[tool.poetry]
name = "annotated-transformer"
version = "0.1.0"
description = ""
authors = ["uriyeobi <uriyeobi@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.9"
torch = "^2.1.2"
pandas = "^2.1.4"
nbconvert = "^7.14.2"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
